monitoring/config/base/kube-prometheus-stack/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.alertmanager"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
