monitoring/config/base/kube-prometheus-stack/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - grafana.lab42.codewithakay.dev
      secretName: grafana-production-tls-cert
  rules:
    - host: grafana.lab42.codewithakay.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
