monitoring/config/base/kube-prometheus-stack/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.prometheus"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
